# precio-del-dolar

./: .gitignore  README.md  pyproject.toml  scrape_value.py
.devcontainer/: Dockerfile  devcontainer.json
perexchange/: main.py
perexchange/core/: config.py
perexchange/db/: session.py
perexchange/models/: exchange_rate.py
perexchange/schemas/: exchange_rate.py
perexchange/services/: analysis.py  exchange.py
precio-del-dolar/: get_minimum_price.py  main.py
src/: get_minimum_price.py
