[tool.poetry]
name = "precio-del-dolar"
version = "0.1.0"
description = ""
authors = ["David <contacto@altmails.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
flask = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
